// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bare button icon renders a button icon 1`] = `
<button
  aria-haspopup={undefined}
  className="slds-button slds-button_icon"
  id={undefined}
>
  <svg
    aria-hidden={true}
    className="slds-button__icon"
  >
    <use
      xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#settings"
    />
  </svg>
  <span
    className="slds-assistive-text"
  >
    Provide description of action
  </span>
</button>
`;

exports[`bare button icon renders a disabled button icon 1`] = `
<button
  aria-haspopup={undefined}
  className="slds-button slds-button_icon"
  disabled={true}
  id={undefined}
>
  <svg
    aria-hidden={true}
    className="slds-button__icon"
  >
    <use
      xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#settings"
    />
  </svg>
  <span
    className="slds-assistive-text"
  >
    Provide description of action
  </span>
</button>
`;

exports[`brand button icon renders a button icon 1`] = `
<button
  aria-haspopup={undefined}
  className="slds-button slds-button_icon slds-button_icon-brand"
  id={undefined}
>
  <svg
    aria-hidden={true}
    className="slds-button__icon"
  >
    <use
      xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#settings"
    />
  </svg>
  <span
    className="slds-assistive-text"
  >
    Provide description of action
  </span>
</button>
`;

exports[`brand button icon renders a disabled button icon 1`] = `
<button
  aria-haspopup={undefined}
  className="slds-button slds-button_icon slds-button_icon-brand"
  disabled={true}
  id={undefined}
>
  <svg
    aria-hidden={true}
    className="slds-button__icon"
  >
    <use
      xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#settings"
    />
  </svg>
  <span
    className="slds-assistive-text"
  >
    Provide description of action
  </span>
</button>
`;

exports[`button icon on inversed background renders a button icon 1`] = `
<button
  aria-haspopup={undefined}
  className="slds-button slds-button_icon slds-button_icon-inverse"
  id={undefined}
>
  <svg
    aria-hidden={true}
    className="slds-button__icon"
  >
    <use
      xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#settings"
    />
  </svg>
  <span
    className="slds-assistive-text"
  >
    Provide description of action
  </span>
</button>
`;

exports[`button icon on inversed background renders a disabled button icon 1`] = `
<button
  aria-haspopup={undefined}
  className="slds-button slds-button_icon slds-button_icon-inverse"
  disabled={true}
  id={undefined}
>
  <svg
    aria-hidden={true}
    className="slds-button__icon"
  >
    <use
      xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#settings"
    />
  </svg>
  <span
    className="slds-assistive-text"
  >
    Provide description of action
  </span>
</button>
`;

exports[`button icon with bordered filled container renders a button icon 1`] = `
<button
  aria-haspopup={undefined}
  className="slds-button slds-button_icon slds-button_icon-border-filled"
  id={undefined}
>
  <svg
    aria-hidden={true}
    className="slds-button__icon"
  >
    <use
      xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#settings"
    />
  </svg>
  <span
    className="slds-assistive-text"
  >
    Provide description of action
  </span>
</button>
`;

exports[`button icon with bordered filled container renders a disabled button icon 1`] = `
<button
  aria-haspopup={undefined}
  className="slds-button slds-button_icon slds-button_icon-border-filled"
  disabled={true}
  id={undefined}
>
  <svg
    aria-hidden={true}
    className="slds-button__icon"
  >
    <use
      xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#settings"
    />
  </svg>
  <span
    className="slds-assistive-text"
  >
    Provide description of action
  </span>
</button>
`;

exports[`button icon with bordered transparent container renders a button icon 1`] = `
<button
  aria-haspopup={undefined}
  className="slds-button slds-button_icon slds-button_icon-border"
  id={undefined}
>
  <svg
    aria-hidden={true}
    className="slds-button__icon"
  >
    <use
      xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#settings"
    />
  </svg>
  <span
    className="slds-assistive-text"
  >
    Provide description of action
  </span>
</button>
`;

exports[`button icon with bordered transparent container renders a disabled button icon 1`] = `
<button
  aria-haspopup={undefined}
  className="slds-button slds-button_icon slds-button_icon-border"
  disabled={true}
  id={undefined}
>
  <svg
    aria-hidden={true}
    className="slds-button__icon"
  >
    <use
      xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#settings"
    />
  </svg>
  <span
    className="slds-assistive-text"
  >
    Provide description of action
  </span>
</button>
`;

exports[`button icon with container renders a button icon 1`] = `
<button
  aria-haspopup={undefined}
  className="slds-button slds-button_icon slds-button_icon-container"
  id={undefined}
>
  <svg
    aria-hidden={true}
    className="slds-button__icon"
  >
    <use
      xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#settings"
    />
  </svg>
  <span
    className="slds-assistive-text"
  >
    Provide description of action
  </span>
</button>
`;

exports[`button icon with container renders a disabled button icon 1`] = `
<button
  aria-haspopup={undefined}
  className="slds-button slds-button_icon slds-button_icon-container"
  disabled={true}
  id={undefined}
>
  <svg
    aria-hidden={true}
    className="slds-button__icon"
  >
    <use
      xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#settings"
    />
  </svg>
  <span
    className="slds-assistive-text"
  >
    Provide description of action
  </span>
</button>
`;

exports[`button menu icon for dropdowns renders a button menu icon 1`] = `
<button
  aria-haspopup="true"
  className="slds-button slds-button_icon slds-button_icon-more"
  id={undefined}
>
  <svg
    aria-hidden={true}
    className="slds-button__icon"
  >
    <use
      xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#settings"
    />
  </svg>
  <svg
    aria-hidden={true}
    className="slds-button__icon slds-button__icon_x-small"
  >
    <use
      xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#down"
    />
  </svg>
  <span
    className="slds-assistive-text"
  >
    Provide description of action
  </span>
</button>
`;

exports[`button menu icon for dropdowns renders a button menu icon on inversed background 1`] = `
<button
  aria-haspopup="true"
  className="slds-button slds-button_icon slds-button_icon-container-more slds-button_icon-inverse"
  id={undefined}
>
  <svg
    aria-hidden={true}
    className="slds-button__icon"
  >
    <use
      xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#settings"
    />
  </svg>
  <svg
    aria-hidden={true}
    className="slds-button__icon slds-button__icon_x-small"
  >
    <use
      xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#down"
    />
  </svg>
  <span
    className="slds-assistive-text"
  >
    Provide description of action
  </span>
</button>
`;

exports[`stateful button icon renders a disabled stateful button icon 1`] = `
<button
  aria-haspopup={undefined}
  aria-pressed="true"
  className="slds-button slds-button_icon slds-button_icon-border-filled"
  disabled={true}
  id={undefined}
  title="Pin"
>
  <svg
    aria-hidden={true}
    className="slds-button__icon"
  >
    <use
      xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#pin"
    />
  </svg>
  <span
    className="slds-assistive-text"
  >
    Pin
  </span>
</button>
`;

exports[`stateful button icon renders a selected disabled stateful button icon 1`] = `
<button
  aria-haspopup={undefined}
  aria-pressed="true"
  className="slds-button slds-button_icon slds-is-selected slds-button_icon-border-filled"
  disabled={true}
  id={undefined}
  title="Pin"
>
  <svg
    aria-hidden={true}
    className="slds-button__icon"
  >
    <use
      xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#pinned"
    />
  </svg>
  <span
    className="slds-assistive-text"
  >
    Pin
  </span>
</button>
`;

exports[`stateful button icon renders a selected stateful button icon 1`] = `
<button
  aria-haspopup={undefined}
  aria-pressed="true"
  className="slds-button slds-button_icon slds-is-selected slds-button_icon-border-filled"
  disabled={false}
  id={undefined}
  title="Like"
>
  <svg
    aria-hidden={true}
    className="slds-button__icon"
  >
    <use
      xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#like"
    />
  </svg>
  <span
    className="slds-assistive-text"
  >
    Like
  </span>
</button>
`;

exports[`stateful button icon renders the stateful button icon 1`] = `
<button
  aria-haspopup={undefined}
  aria-pressed="false"
  className="slds-button slds-button_icon slds-button_icon-border-filled"
  disabled={false}
  id={undefined}
  title="Like"
>
  <svg
    aria-hidden={true}
    className="slds-button__icon"
  >
    <use
      xlinkHref="/assets/icons/utility-sprite/svg/symbols.svg#like"
    />
  </svg>
  <span
    className="slds-assistive-text"
  >
    Like
  </span>
</button>
`;
